// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Balance slice tests should update state on fulfilled boost balance 1`] = `
Object {
  "byChainId": Object {
    "bsc": Object {
      "byBoostId": Object {
        "moo_beltbnb-czodiac": Object {
          "balance": "100",
          "rewards": "10",
        },
        "moo_ellipsis-renbtc-charge": Object {
          "balance": "100",
          "rewards": "10",
        },
      },
      "byGovVaultId": Object {},
      "byTokenId": Object {},
    },
  },
  "depositedVaultIds": Object {
    "govVaults": Array [],
    "standardVaults": Array [],
  },
}
`;

exports[`Balance slice tests should update state on fulfilled gov boost pools 1`] = `
Object {
  "byChainId": Object {
    "bsc": Object {
      "byBoostId": Object {},
      "byGovVaultId": Object {
        "banana-nfty-wbnb": Object {
          "balance": "10",
          "rewards": "100",
        },
        "belt-beltbnb": Object {
          "balance": "5",
          "rewards": "10",
        },
      },
      "byTokenId": Object {},
    },
  },
  "depositedVaultIds": Object {
    "govVaults": Array [
      Object {
        "chainId": "bsc",
        "vaultId": "banana-nfty-wbnb",
      },
      Object {
        "chainId": "bsc",
        "vaultId": "belt-beltbnb",
      },
    ],
    "standardVaults": Array [],
  },
}
`;

exports[`Balance slice tests should update state on fulfilled token balance 1`] = `
Object {
  "byChainId": Object {
    "bsc": Object {
      "byBoostId": Object {},
      "byGovVaultId": Object {},
      "byTokenId": Object {
        "BIFI": Object {
          "balance": "10",
        },
        "banana-nfty-wbnb": Object {
          "balance": "10",
        },
      },
    },
  },
  "depositedVaultIds": Object {
    "govVaults": Array [],
    "standardVaults": Array [],
  },
}
`;
